<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listaId"
        android:layout_width="405dp"
        android:layout_height="480dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adicionarId" />

    <Button
        android:id="@+id/adicionarId"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="15dp"
        android:onClick="salvarProduto"
        android:text="@string/adicionarSting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoProdutoId" />

    <Button
        android:id="@+id/limparListaId"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="15dp"
        android:onClick="limparLista"
        android:text="@string/limparListaSting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoProdutoId" />

    <EditText
        android:id="@+id/nomeProdutoId"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/produtoHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/marcaProdutoId"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/marcaHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeProdutoId" />

    <EditText
        android:id="@+id/precoProdutoId"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/precoHint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marcaProdutoId" />
</androidx.constraintlayout.widget.ConstraintLayout>